--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -124,6 +124,9 @@ $x-large                    : 1280px !default;
 $right-sidebar-width-narrow : 0px;
 $right-sidebar-width        : 0px;
 $right-sidebar-width-wide   : 0px;
+$left-sidebar-width-narrow : 10px;
+$left-sidebar-width        : 20px;
+$left-sidebar-width-wide   : 30px;
 
 $susy: (
   columns: 12,
