--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -33,6 +33,7 @@
   font-size: $type-size-5;
   color: mix(#fff, $gray, 25%);
   border-bottom: 1px solid $border-color;
+  padding-left: $left-sidebar-width-narrow;
 
   + .list__item .archive__item-title {
     margin-top: 0.5em;
@@ -92,6 +93,7 @@
 .list__item {
   @include breakpoint($medium) {
     padding-right: $right-sidebar-width-narrow;
+    padding-left: $left-sidebar-width-wide;
   }
 
   @include breakpoint($large) {
