--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -10,7 +10,7 @@
   padding-right: 1em;
   animation: intro 0.3s both;
   animation-delay: 0.35s;
-
+  
   @include breakpoint($x-large) {
     max-width: $x-large;
   }
@@ -20,7 +20,7 @@
   @include breakpoint($large) {
     @include span(10 of 12 last);
     @include prefix(0.5 of 12);
-    @include suffix(2 of 12);
+    @include suffix(2.3 of 12);
   }
 
   .page__inner-wrap {
@@ -36,6 +36,7 @@
 
 .page__title {
   margin-top: 0;
+  margin-bottom: 20px;
   line-height: 1;
 
   & + .page__meta {
