--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -41,6 +41,12 @@ layout: default
           {% if page.abstract and page.abstract != "" %}<h2>Abstract</h2>
           <p style="font-size: 0.85em">{{page.abstract}}</p>
           {% endif %}
+          {% if page.main_outcomes and page.main_outcomes != "" %}<h2>Main research outcomes</h2>
+          <p style="font-size: 0.85em">{{page.main_outcomes}}</p>
+          {% if page.image and page.image != "" %}
+          <img src="{{site.url}}{{page.image}}" onclick="window.open(this.src)"></img>
+          {% endif %}
+          {% endif %}
         {% elsif page.date %}
           <p class="page__date"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong> <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | default: "1900-01-01" | date: "%B %d, %Y" }}</time></p>
         {% endif %}
