--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -63,9 +63,9 @@ layout: default
 
       <section class="page__content" itemprop="text">
         {{ content }}<div>
-        {% if page.link %}<a href="{{ page.link }}" class="btn btn--success">{{ site.data.ui-text[site.locale].ext_link_label | default: "Publisher Direct Link" }}</a>{% endif %}
-        {% if page.pre_print_link %}<a href="{{ page.pre_print_link }}" class="btn btn--danger">Pre-print Direct Link</a>{% endif %}
-        {% if page.open_access_link %}<a href="{{ page.open_access_link }}" class="btn">Open-access Direct Link</a>{% endif %}
+        {% if page.link %}<a href="{{ page.link }}" class="btn btn">{{ site.data.ui-text[site.locale].ext_link_label | default: "Publisher Direct Link" }}</a>{% endif %}
+        {% if page.pre_print_link %}<a href="{{ page.pre_print_link }}" class="btn btn--positive">Pre-print Direct Link</a>{% endif %}
+        {% if page.open_access_link %}<a href="{{ page.open_access_link }}" class="btn btn--success">Open-access Direct Link</a>{% endif %}
         </div>
       </section>
 
