--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -95,6 +95,16 @@
     }
   }
 
+  /* positive */
+
+  &--positive {
+    background-color: $info-color;
+
+    &:hover {
+      background-color: mix(#000, $info-color, 20%);
+    }
+  }
+
   /* danger */
 
   &--danger {
