--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -63,7 +63,7 @@ layout: default
           {% endif %}
           {% if page.press and page.press != "" %}<h2 id="media">Media coverage</h2>
             {% for item in page.press%}
-              <a style="font-size: 0.85em; " href="{{ item[0] }}">{{ item[1] }}</a><br/>
+              <a style="font-size: 0.85em; " href="{{ item[0] }}">[{% if item[1] == "en"%}<span class="flag-icon flag-icon-gb" style="font-size: 17px"></span>{%elsif item[1] == "nl"%}<span class="flag-icon flag-icon-nl" style="font-size: 17px"></span>{%endif%}] {{ item[2] }}</a><br/>
             {% endfor %}
           {% endif %}
         {% elsif page.date %}
