--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -15,6 +15,8 @@ savespace {
   margin-bottom: -20px;
 }
 
+
+
 .btn {
   /* default button */
   display: inline-block;
@@ -80,7 +82,7 @@ savespace {
     color: $info-color !important;
     background-color: mix(#FFF, $info-color, 90%) !important;
     border-color: $info-color !important;
-
+    border-width: 2px !important;
     &:hover {
       color: mix(#0000FF, $info-color, 70%) !important;
       background-color: mix(#FFF, $info-color, 70%) !important;
