--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -66,6 +66,7 @@ $primary-color              : #7a8288;
 $success-color              : #62c462;
 $warning-color              : #f89406;
 $danger-color               : #ee5f5b;
+$appendix-color             : #663a82;
 $info-color                 : #0366d6;
 
 /* brands */
