--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -136,4 +136,6 @@
 {% if site.yandex_site_verification %}
   <meta name="yandex-verification" content="{{ site.yandex_site_verification }}">
 {% endif %}
+
+{% seo %}
 <!-- end SEO -->
