--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -42,14 +42,11 @@ layout: default
             {{ content }}
             <p style="float: right !important; margin-bottom: -40px; margin-top: -20px">
 
-        <!--{% if page.link %}<a href="{{ page.link }}" class="btn btn"><i class="fa fa-file-pdf-o fa-lg" aria-hidden="true"></i> Publisher Direct Link</a>{% endif %}
-        {% if page.pre_print_link %}<a href="{{ page.pre_print_link }}" class="btn btn--danger"><i class="fa fa-file-pdf-o fa-lg" aria-hidden="true"></i> Pre-print Direct Link</a>{% endif %}
-        {% if page.open_access_link %}<a href="{{ page.open_access_link }}" class="btn btn--success"><i class="fa fa-file-pdf-o fa-lg" aria-hidden="true"></i> Open-access Direct Link</a>{% endif %}-->
         {% if page.source %}<a href="{{ page.source }}" class="btn btn--success"><i class="fa fa-code fa-lg" aria-hidden="true"></i> Source code</a>{% endif %}
         {% if page.database %}<a href="{{ page.database }}" class="btn btn--success"><i class="fa fa-database fa-lg" aria-hidden="true"></i> Datasets</a>{% endif %}
-        {% if page.publisher_link %}<a href="{{ page.publisher_link }}" class="btn btn--danger"><i class="fa fa-file-pdf-o fa-lg" aria-hidden="true"></i> Direct Link (via Publisher)</a>{% endif %}
-        {% if page.pre_print_link %}<a href="{{ page.pre_print_link }}" class="btn btn--danger"><i class="fa fa-file-pdf-o fa-lg" aria-hidden="true"></i> Pre-print Direct Link</a>{% endif %}
-        {% if page.open_access_link %}<a href="{{ page.open_access_link }}" class="btn btn--danger"><i class="fa fa-file-pdf-o fa-lg" aria-hidden="true"></i> Open-access Direct Link</a>{% endif %}
+        {% if page.publisher_link %}<a href="{{ page.publisher_link }}" class="btn btn--pdf"><i class="fa fa-file-pdf-o fa-lg" aria-hidden="true"></i> Publisher link</a>{% endif %}
+        {% if page.pre_print_link %}<a href="{{ page.pre_print_link }}" class="btn btn--pdf"><i class="fa fa-file-pdf-o fa-lg" aria-hidden="true"></i> Pre-print direct link</a>{% endif %}
+        {% if page.open_access_link %}<a href="{{ page.open_access_link }}" class="btn btn--pdf-light"><i class="fa fa-file-pdf-o fa-lg" aria-hidden="true"></i> arXiv.org</a>{% endif %}
         {% if page.extra_section_title %}<a href="#appendix" class="btn btn--appendix"><i class="fa fa-book fa-lg" aria-hidden="true"></i> Appendix</a>{% endif %}
         {% if page.press %}<a href="#media" class="btn btn--info"><i class="fa fa-newspaper-o fa-lg" aria-hidden="true"></i> Media coverage</a>{% endif %}</p>
 
