--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -69,6 +69,7 @@ $danger-color               : #ee5f5b;
 $pdf-color                  : #ee5f5b;
 $appendix-color             : #663a82;
 $info-color                 : #0366d6;
+$video-color                : #000000;
 
 /* brands */
 $behance-color              : #1769FF;
