--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -47,7 +47,7 @@ layout: default
         {% if page.database %}<a href="{{ page.database }}" class="btn btn--success right"><i class="fa fa-database fa-lg" aria-hidden="true"></i> Datasets</a>{% endif %}
         {% if page.source %}<a href="{{ page.source }}" class="btn btn--success right"><i class="fa fa-code fa-lg" aria-hidden="true"></i> Source code</a>{% endif %}
         {% if page.extra_section_title %}<a href="#appendix" class="btn btn--appendix right"><i class="fa fa-book fa-lg" aria-hidden="true"></i> Appendix</a>{% endif %}
-        {% if page.video_link %}<a href="{{ page.video_link }}" class="btn btn--video right"><i class="fa fa-film" aria-hidden="true"></i> Presentation video</a>{% endif %}
+        {% if page.video_link %}<a href="{{ page.video_link }}" class="btn btn--video right"><i class="fa fa-film fa-lg" aria-hidden="true"></i> Presentation video</a>{% endif %}
         {% if page.press %}<a href="#media" class="btn btn--info right"><i class="fa fa-newspaper-o fa-lg" aria-hidden="true"></i> Media coverage</a>{% endif %}</p>
 
           {% if page.abstract and page.abstract != "" %}<h2>Abstract</h2>
