--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -44,6 +44,7 @@ layout: default
         {% if page.publisher_link %}<a href="{{ page.publisher_link }}" class="btn btn--pdf right" target="_blank" rel="noopener noreferrer"><i class="fa fa-file-pdf-o fa-lg" aria-hidden="true"></i> Publisher link</a>{% endif %}
         {% if page.pre_print_link %}<a href="{{ page.pre_print_link }}" class="btn btn--pdf right"><i class="fa fa-file-pdf-o fa-lg" aria-hidden="true"></i> Pre-print direct link</a>{% endif %}
         {% if page.open_access_link %}<a href="{{ page.open_access_link }}" class="btn btn--pdf-light right"><i class="fa fa-file-pdf-o fa-lg" aria-hidden="true"></i> arXiv.org</a>{% endif %}
+        {% if page.white_paper_publisher_link %}<a href="{{ page.white_paper_publisher_link }}" class="btn btn--success right"><i class="fas fa-external-link-alt" aria-hidden="true"></i> Publisher link</a>{% endif %}
         {% if page.database %}<a href="{{ page.database }}" class="btn btn--success right"><i class="fa fa-database fa-lg" aria-hidden="true"></i> Datasets</a>{% endif %}
         {% if page.source %}<a href="{{ page.source }}" class="btn btn--success right"><i class="fa fa-code fa-lg" aria-hidden="true"></i> Source code</a>{% endif %}
         {% if page.extra_section_title %}<a href="#appendix" class="btn btn--appendix right"><i class="fa fa-book fa-lg" aria-hidden="true"></i> Appendix</a>{% endif %}
@@ -52,6 +53,9 @@ layout: default
 
           {% if page.abstract and page.abstract != "" %}<h2>Abstract</h2>
           <p style="font-size: 0.85em">{{page.abstract}}</p>
+          {% endif %}
+          {% if page.exec_summary and page.exec_summary != "" %}<h2>Executive Summary</h2>
+          <p style="font-size: 0.85em">{{page.exec_summary}}</p>
           {% endif %}
           {% if page.main_outcomes and page.main_outcomes != "" %}<h2>Main research outcomes</h2>
           <p style="font-size: 0.85em">{{page.main_outcomes}}</p>
