--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -30,8 +30,10 @@
 .archive__subtitle {
   margin: 1.414em 0 0;
   padding-bottom: 0.5em;
-  font-size: $type-size-5;
-  color: mix(#fff, $gray, 25%);
+  font-size: $type-size-4;
+  /* color: mix(#fff, $gray, 25%); */
+  color: #494e52;
+
   border-bottom: 1px solid $border-color;
   padding-left: $left-sidebar-width-narrow;
 
