--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -71,6 +71,13 @@ $appendix-color             : #663a82;
 $info-color                 : #0366d6;
 $video-color                : #000000;
 
+/*$badge-color                : #474849;
+$badge-color-hover          : #5d5e5f;*/
+$badge-color                : #26ce10;
+$badge-color-hover          : #2ae112;
+$award-color                : #ffd100;
+$award-color-hover          : #ffdc00;
+
 /* brands */
 $behance-color              : #1769FF;
 $dribbble-color             : #ea4c89;
