--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -82,7 +82,8 @@ layout: default
               {% if page.pre_print_link %}<a href="{{ page.pre_print_link }}" class="btn btn--pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Pre-print direct link</a>{% endif %}
               {% if page.open_access_link %}<a href="{{ page.open_access_link }}" class="btn btn--pdf-light"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> arXiv.org</a>{% endif %}
               {% if page.white_paper_publisher_link %}<a href="{{ page.white_paper_publisher_link }}" class="btn btn--success"><i class="fas fa-external-link-alt" aria-hidden="true"></i> Publisher link</a>{% endif %} -->
-              {% if page.publisher_link %}<a href="{{ page.publisher_link }}" class="btn btn--pdf" target="_blank" rel="noopener noreferrer"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> PDF</a>{% endif %}
+              {% if page.publisher_link %}<a href="{{ page.open_access_link }}" class="btn btn--pdf" target="_blank" rel="noopener noreferrer"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Publisher PDF</a>{% endif %}
+              {% if page.open_access_link %}<a href="{{ page.open_access_link }}" class="btn btn--pdf-light"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Open access PDF</a>{% endif %}
               {% if page.pre_print_link %}<a href="{{ page.pre_print_link }}" class="btn btn--pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Pre-print</a>{% endif %}
               {% if page.white_paper_publisher_link %}<a href="{{ page.white_paper_publisher_link }}" class="btn btn--success"><i class="fas fa-external-link-alt" aria-hidden="true"></i> PDF</a>{% endif %}
               {% if page.database %}<a href="{{ page.database }}" class="btn btn--success"><i class="fa fa-database" aria-hidden="true"></i> Datasets</a>{% endif %}
