--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -324,7 +324,7 @@ b, i, strong, em, blockquote, p, q, span, figure, img, h1, h2, header, input, a,
     transition: all 2s;
 }
 
-#pre {
+div[id^="pre"] {
   -webkit-mask-image: linear-gradient(to bottom, black 50%, transparent 100%);
   mask-image: linear-gradient(to bottom, black 50%, transparent 100%);
 }
