typos and merging publications

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -74,6 +74,8 @@ $video-color                : #000000;
 
 /*$badge-color                : #474849;
 $badge-color-hover          : #5d5e5f;*/
+$whitepaper-color           : #3699f3;
+$whitepaper-color-hover     : #63b0f5; 
 $badge-color                : #26ce10;
 $badge-color-hover          : #2ae112;
 $award-color                : #ffd100;
