--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -202,6 +202,19 @@ savespace {
     }
   }
 
+  &--whitepaper {
+    color: $text-color !important;
+    background-color: mix(#FFF, $whitepaper-color, 60%) !important;
+    border-color: $whitepaper-color !important;
+    padding: 0em 0.3em !important;
+    font-size: $type-size-7;
+
+    &:hover {
+      background-color: mix(#FFF, $whitepaper-color-hover, 60%) !important;
+
+    }
+  }
+
   &--badge {
     color: $text-color !important;
     background-color: mix(#FFF, $badge-color, 60%) !important;
